Add GetAppResponsibles endpoint
